fix gl-toolbar svg icon vertical align

--- a/src/styl/edit/index.styl
+++ b/src/styl/edit/index.styl
@@ -30,3 +30,6 @@
 
 .treeview .folder-menu .folder-item
   padding-left: 1em
+
+.ql-toolbar svg
+  vertical-align: baseline
